fixed and adjust the share button sizing and spacing

--- a/packages/augur-ui/src/modules/market-cards/common.styles.less
+++ b/packages/augur-ui/src/modules/market-cards/common.styles.less
@@ -731,7 +731,7 @@
 	padding: @size-8;
 
 	> h3 {
-		.text-12-semi-bold;
+		.text-14-bold;
 
 		color: var(--color-primary-text);
 		text-transform: capitalize;
@@ -809,6 +809,17 @@
 			margin-bottom: 0;
 		}
 
+		> span[class*="ProgressLabel"] {
+			> span:first-of-type {
+				.text-12;
+			}
+			> span:last-of-type {
+				.text-12-bold;
+
+				text-transform: capitalize;
+			}
+		}
+
 		@media @breakpoint-mobile-tablet {
 			grid-template-columns: @size-20 1fr 0fr 0fr 0fr;
 			margin-bottom: 0;
@@ -826,6 +837,7 @@
 
 			@media @breakpoint-mobile-tablet {
 				grid-column: 5;
+				margin-left: 0;
 			}
 		}
 
@@ -840,6 +852,9 @@
 			> button > svg {
 				fill: var(--color-inactive-text);
 				stroke: none;
+				height: @size-18;
+				width: @size-18;
+				transform: none;
 			}
 
 			> div {
@@ -1150,9 +1165,20 @@
 				}
 
 				> span:last-of-type {
-					.text-12-semi-bold;
+					.text-12-bold;
 
 					text-transform: capitalize;
+				}
+			}
+
+			> div[class*="DotSelection"] {
+				height: @size-18;
+				width: @size-18;
+
+				> button > svg {
+					height: @size-18;
+					width: @size-18;
+					transform: none;
 				}
 			}
 
@@ -1257,6 +1283,7 @@
 				> li:first-of-type {
 					background: var(--color-table-header);
 					height: @size-30;
+					display: flex;
 
 						> button {
 						.text-10-semi-bold;
@@ -1627,6 +1654,12 @@
 		> span[class*="ProgressLabel"] {
 			display: none;
 			margin: 0 @size-8;
+
+			> span:last-of-type {
+				.text-12-bold;
+
+				text-transform: capitalize;
+			}
 		}
 
 		&.NoLeader {
